--- a/base_image/haproxy.cfg
+++ b/base_image/haproxy.cfg
@@ -15,14 +15,13 @@ defaults
 
 frontend http-in
     bind *:80
-    
-    http-request set-var(txn.only_host) hdr(host),lower,regsub(:[0-9]+$,"")
+
 
     # Host-based routing
-    acl is_terminal var(txn.only_host) -m str terminal
-    acl is_editor var(txn.only_host) -m str editor
-    acl is_vnc var(txn.only_host) -m str vnc
-    acl is_access_by_port var(txn.only_host) -m beg port-
+    acl is_terminal hdr(host) -m str terminal.
+    acl is_editor hdr(host) -m str editor.
+    acl is_vnc hdr(host) -m str vnc.
+    acl is_access_by_port hdr(host) -m beg port-
 
     use_backend terminal if is_terminal
     use_backend editor if is_editor
