feat: haproxy updated

--- a/base_image/haproxy.cfg
+++ b/base_image/haproxy.cfg
@@ -16,11 +16,10 @@ defaults
 frontend http-in
     bind *:80
 
-
     # Host-based routing
-    acl is_terminal hdr(host) -m str terminal.
-    acl is_editor hdr(host) -m str editor.
-    acl is_vnc hdr(host) -m str vnc.
+    acl is_terminal hdr(host) -m beg terminal.
+    acl is_editor hdr(host) -m beg editor.
+    acl is_vnc hdr(host) -m beg vnc.
     acl is_access_by_port hdr(host) -m beg port-
 
     use_backend terminal if is_terminal
